Fix content overflow in footer section

--- a/src/styles/basic.css
+++ b/src/styles/basic.css
@@ -15,7 +15,13 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 .main {
-  padding: 30px 30px 90px 30px;
+  padding: 30px 30px 0 30px;
+}
+
+.main::after {
+  content: ' ';
+  height: 90px;
+  display: inline-block;
 }
 
 h1 {
