--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -51,7 +51,3 @@
 .mt-24 {
   margin-top: 24px;
 }
-
-.white-space {
-  height: 90px;
-}
